@@ -2,6 +2,7 @@ Version 0.4.3~dev
 
 	* Add en/disabling sl2d through /etc/default/sl2d, closes: #2997.
 	* Check for txt2tags in configure.
+	* Catch more KeyError cases, refs: #3027.
 
 Version 0.4.2 Released on 2010/03/08
 
